--- a/www/index.html
+++ b/www/index.html
@@ -31,14 +31,16 @@
 
 
     <script src="js/app.js"></script>
-    <script src="js/controllers.module.js"></script>
-    <script src="view/menu/menu.controller.js"></script>
     <script src="js/services.module.js"></script>
+    <script src="js/controllers.module.js"></script>
+
     <script src="js/directives.module.js"></script>
     <script src="js/filters.module.js"></script>\
     <script src="js/services.js"></script>
     <script src="js/localstorage.service.js"></script>
-
+    <script src="js/main.controller.js"></script>
+    <script src="view/menu/menu.controller.js"></script>
+    <script src="view/login/login.controller.js"></script>
   </head>
 
   <body ng-app="starter">
