--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,9 @@
     <script src="js/main.controller.js"></script>
     <script src="view/menu/menu.controller.js"></script>
     <script src="view/login/login.controller.js"></script>
+    <script src="view/category/category-list.controller.js"></script>
+    <script src="view/category/category-add.controller.js"></script>
+
   </head>
 
   <body ng-app="starter">
