--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,8 @@
     <script src="view/login/login.controller.js"></script>
     <script src="view/category/category-list.controller.js"></script>
     <script src="view/category/category-add.controller.js"></script>
-
+    <script src="view/shop/shop.controller.js"></script>
+    <script src="view/shop/shop-edit.controller.js"></script>
   </head>
 
   <body ng-app="starter">
