--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,7 @@
     <script src="view/category/category-add.controller.js"></script>
     <script src="view/shop/shop.controller.js"></script>
     <script src="view/shop/shop-edit.controller.js"></script>
+    <script src="view/setting/setting.controller.js"></script>
   </head>
 
   <body ng-app="starter">
