新增商品页面UI完成
后台跳转至list出现问题

--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,8 @@
     <script src="view/shop/shop.controller.js"></script>
     <script src="view/shop/shop-edit.controller.js"></script>
     <script src="view/setting/setting.controller.js"></script>
+    <script src="view/product/product-add.controller.js"></script>
+    <script src="view/category/category.service.js"></script>
   </head>
 
   <body ng-app="starter">
