--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,8 @@
     <script src="view/shop/shop-edit.controller.js"></script>
     <script src="view/setting/setting.controller.js"></script>
     <script src="view/product/product-add.controller.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="cordova.js"></script>
 
   </head>
 
