--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
-
+<script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/services.module.js"></script>
@@ -51,6 +51,7 @@
     <script src="view/shop/shop-edit.controller.js"></script>
     <script src="view/setting/setting.controller.js"></script>
     <script src="view/product/product-add.controller.js"></script>
+    <script src="view/product/product-list.controller.js"></script>
 
 
 
