--- a/www/index.html
+++ b/www/index.html
@@ -32,11 +32,14 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
 <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+<script src="lib/angular-messages/angular-messages.js"></script>
+
 
     <script src="js/app.js"></script>
     <script src="js/services.module.js"></script>
     <script src="js/controllers.module.js"></script>
-
+    <script src="js/popup.services.js"></script>
+    <script src="js/equalto.directive.js"></script>
     <script src="js/directives.module.js"></script>
     <script src="js/filters.module.js"></script>
     <script src="js/services.js"></script>
@@ -47,12 +50,14 @@
     <script src="view/login/login.controller.js"></script>
     <script src="view/category/category-list.controller.js"></script>
     <script src="view/category/category-add.controller.js"></script>
+    <script src="view/changepassword/changepassword.controller.js"></script>
     <script src="view/shop/shop.controller.js"></script>
     <script src="view/shop/shop-edit.controller.js"></script>
     <script src="view/setting/setting.controller.js"></script>
     <script src="view/product/product-add.controller.js"></script>
     <script src="view/product/product-list.controller.js"></script>
-
+    <script src="js/company.directive.js"></script>
+    <script src="js/expander.directive.js"></script>
 
 
   </head>
