--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,9 @@
     <script src="js/localstorage.service.js"></script>
     <script src="js/popup.service.js"></script>
     <script src="js/company.directive.js"></script>
+    <script src="js/equalto.directive.js"></script>
     <script src="js/expander.directive.js"></script>
+    <script src="js/phone.directive.js"></script>
     <script src="view/category/category.service.js"></script>
     <script src="js/main.controller.js"></script>
     <script src="view/menu/menu.controller.js"></script>
